Fix love slide spacing

--- a/style.css
+++ b/style.css
@@ -640,7 +640,7 @@ input {
     }
 
     #love-main{
-        grid-template-rows: 330px auto auto;
+        grid-template-rows: 420px auto auto;
     }
 
     #xxy-main {
